<resources>
    <string name="app_name">bit603_a3_tonylawrie</string>

    <string name="company_name">Kiwi Cakes and Cookies</string>

    <!--    Login Main Activity-->
    <string name="home_title">Login</string>
    <string name="home_username">Username</string>
    <string name="home_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_desc">initiate login</string>

    <!--    Menu items-->
    <string name="menu_logout">Logout</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_add">Add Item</string>
    <string name="test_data">Add Test Items</string>
    <string name="delete_items">Delete all</string>
    <string name="previous">Previous</string>
    <string name="Next">Next</string>

    <!--    inventory-->
    <string name="admin_menu">Admin</string>
    <string name="inventory_title">Inventory</string>
    <string name="empty_inventory">Inventory is empty</string>
    <string name="add_item_title">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="item_alert_title">Pick Item Type</string>
    <string name="item_type_hint">Item Type</string>
    <string name="add_button_description">ADD Button</string>
    <string name="user_management_title">User Management</string>
    <string name="view_users">View Users</string>
    <string name="add_user">Add User</string>
    <string name="remove_users">Remove User</string>
    <string name="add_user_title">Add User</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="employee_number">Employee Number</string>
    <string name="contact">Contact #</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="search_username">Search Username</string>
    <string name="remove">Remove</string>
    <string name="login_error">Incorrect username or password</string>


</resources>