<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/previous"
        android:title="@string/previous"
        android:icon="@drawable/ic_outline_arrow_back_ios_24"/>

    <item
        android:id="@+id/add_test_data"
        android:title="@string/test_data"
        android:icon="@drawable/ic_outline_library_add_24"/>
    <item
        android:id="@+id/delete_items"
        android:title="@string/delete_items"
        android:icon="@drawable/ic_outline_delete_forever_24"/>
    <item
        android:id="@+id/next"
        android:title="@string/Next"
        android:icon="@drawable/ic_outline_navigate_next_24"/>

</menu>